@@ -36,11 +36,17 @@ is $sqlite->client, 'sqlite3' . ($^O eq 'MSWin32' ? '.exe' : ''),
     'client should default to sqlite3';
 is $sqlite->db_name, file('foo.db'), 'db_name should be required';
 is $sqlite->destination, $sqlite->db_name->stringify,
-    'Destination should be db_name strintified';
+    'Destination should be db_name stringified';
 is $sqlite->sqitch_db, file('foo')->dir->file('sqitch.db'),
     'sqitch_db should default to "$db_name-sqitch.db" in the same diretory as db_name';
 is $sqlite->meta_destination, $sqlite->sqitch_db->stringify,
-    'Meta destination should be sqitch_db strintified';
+    'Meta destination should be sqitch_db stringified';
+
+# Pretend for now that we always have a valid SQLite.
+my $mock_sqitch = Test::MockModule->new(ref $sqitch);
+$mock_sqitch->mock(probe => sub {
+    '3.7.12 2012-04-03 19:43:07 86b8481be7e76cccc92d14ce762d21bfb69504af'
+});
 
 my @std_opts = (
     '-noheader',
@@ -106,11 +112,12 @@ is $sqlite->client, '/path/to/sqlite3',
 is $sqlite->db_name, file('/path/to/sqlite.db'),
     'db_name should fall back on config';
 is $sqlite->destination, $sqlite->db_name->stringify,
-    'Destination should be configured db_name strintified';
+    'Destination should be configured db_name stringified';
 is $sqlite->sqitch_db, file('meta.db'),
     'sqitch_db should fall back on config';
 is $sqlite->meta_destination, $sqlite->sqitch_db->stringify,
-    'Meta destination should be configured sqitch_db strintified';
+    'Meta destination should be configured sqitch_db stringified';
+
 is_deeply [$sqlite->sqlite3], [$sqlite->client, @std_opts, $sqlite->db_name],
     'sqlite3 command should have config values';
 
@@ -122,19 +129,18 @@ ok $sqlite = $CLASS->new(sqitch => $sqitch),
 is $sqlite->client, 'foo/bar', 'The client should be grabbed from sqitch';
 is $sqlite->db_name, file('my.db'), 'The db_name should be grabbed from sqitch';
 is $sqlite->destination, $sqlite->db_name->stringify,
-    'Destination should be optioned db_name strintified';
+    'Destination should be optioned db_name stringified';
 is_deeply [$sqlite->sqlite3], [$sqlite->client, @std_opts, $sqlite->db_name],
     'sqlite3 command should have option values';
 
 ##############################################################################
 # Test _run(), _capture(), and _spool().
 my $db_name = $tmp_dir->file('sqitch.db');
+$sqitch = App::Sqitch->new;
 ok $sqlite = $CLASS->new(sqitch => $sqitch, db_name => $db_name),
     'Instantiate with a temporary database file';
-
 can_ok $sqlite, qw(_run _capture _spool);
 
-my $mock_sqitch = Test::MockModule->new('App::Sqitch');
 my (@run, @capture, @spool);
 $mock_sqitch->mock(run     => sub { shift; @run = @_ });
 $mock_sqitch->mock(capture => sub { shift; @capture = @_ });
@@ -178,9 +184,6 @@ SKIP: {
         'Verifile file should be passed to run() for high verbosity';
 }
 
-$mock_sqitch->unmock_all;
-$mock_config->unmock_all;
-
 ##############################################################################
 # Test DateTime formatting stuff.
 can_ok $CLASS, '_ts2char_format';
@@ -200,6 +203,9 @@ is $dt->minute,  7, 'DateTime minute should be set';
 is $dt->second,  1, 'DateTime second should be set';
 is $dt->time_zone->name, 'UTC', 'DateTime TZ should be set';
 
+$mock_sqitch->unmock_all;
+$mock_config->unmock_all;
+
 ##############################################################################
 # Can we do live tests?
 my $alt_db = $db_name->dir->file('sqitchtest.db');
@@ -215,7 +221,7 @@ DBIEngineTest->run(
         my $self = shift;
 
         # Should have the database handle and client.
-        $self->dbh && $self->sqitch->probe( $self->client, '-version' );
+        $self->dbh && $self->sqlite3;
 
         # Make sure we have a supported version.
         my $version = $self->dbh->{sqlite_version};
